--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -39,8 +39,8 @@ jobs:
       - uses: EndBug/add-and-commit@v7 # You can change this to use a specific version.
         with:
           add: '["package.json", "package-lock.json", "CHANGELOG.md"]'
-          author_name: Version Bot
-          author_email: <>
+          committer_name: Version Bot
+          committer_email: <>
 
       # - name: Create Release Pull Request or Publish to npm
       #   id: changesets
