--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.13",
   "description": "",
   "author": "",
+  "main": "dist/main.js",
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -19,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "release": "standard-version",
-    "pre-release": "standard-version --prerelease beta"
+    "pre-release": "standard-version --prerelease beta",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
