--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "standard-version-nestjs",
+  "name": "@kw/standard-version-nestjs",
   "version": "0.0.14",
   "description": "",
   "author": "",
